# gamejam

./: README.md
programs/raffle/programs/raffle/: Cargo.toml
programs/raffle/programs/raffle/src/: lib.rs
programs/raffle/programs/raffle/src/instructions/: draw.rs  redeem.rs  verify.rs  wyhash.rs
programs/vault/: .gitignore  Anchor.toml  README.md  Trident.toml  mise.toml  package-lock.json  package.json  pnpm-lock.yaml
programs/vault/cli/: pnpm-lock.yaml
programs/vault/cli/src/: index.ts  vault.ts  vaultType.ts
programs/vault/clients/js/vault_client/accounts/: vault.ts  vaultType.ts
programs/vault/clients/js/vault_client/instructions/: closeVault.ts  closeVaultType.ts  deactivate.ts  deposit.ts  (+6 more)
programs/vault/idl/: vault.json
programs/vault/programs/vault/: Cargo.toml
programs/vault/programs/vault/src/: constants.rs  errors.rs  lib.rs  states.rs
programs/vault/programs/vault/src/instructions/: accept_vault_type_authority.rs  activate.rs  close_vault.rs  close_vault_type.rs  deactivate.rs  deposit.rs  lock_vault_type.rs  mod.rs  new_vault.rs  new_vault_type.rs  nominate_vault_type_authority.rs  roll_over_vault_type.rs  transfer_vault_type_token.rs  withdraw.rs
programs/vault/programs/vault/tests/: basic_tests.rs  misc_tests.rs  native_tests.rs  season_tests.rs
programs/vault/programs/vault/tests/common/: helpers.rs  utils.rs
programs/vault/scripts/: generate-clients.js
programs/vault/tests/: vault.ts
programs/vault/trident-tests/fuzz_tests/: Cargo.toml
programs/vault/trident-tests/fuzz_tests/fuzz_0/: fuzz_instructions.rs  test_fuzz.rs
(+2 files in other folders)
