[package]
name = "vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
trident-fuzzing = ["dep:trident-fuzz"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

[dependencies.trident-derive-accounts-snapshots]
version = "0.0.2"

[dependencies.trident-fuzz]
version = "0.2.0"
optional = true

#[dependencies.trident-fuzz]
#path = "../../../trident/crates/fuzz"
#optional = true
#features = ["fuzzing_debug"]

[dev-dependencies]
solana-program-test = "1.18.26"
solana-program = "1.18.26"
solana-sdk = "1.18.26"
spl-token = "4"
spl-associated-token-account = "3"
